<resources>
    <string name="app_name" translatable="false">SweetShare</string>
    <string name="pass_recovery_welcome_text">Forgot your password? Don\'t worry, it happens to everyone. Enter your account email below
    so we can send you a password reset link.</string>
    <string name="reset_link_sent">Link sent. Please check your inbox.</string>
    <string name="reset_link_error">Link not sent. Check the input and try again.</string>
    <string name="messages_message_tab">Messages Tab</string>
    <string name="explore_tab_categories_text">Categories</string>
    <string name="login_hint_email">Email</string>
    <string name="login_button_text">Login</string>
    <string name="user_display_name">Display Name</string>
    <string name="profile_edit_profile">Edit Profile</string>
    <string name="login_password">Password</string>
    <string name="login_or">or</string>
    <string name="login_create_an_account">Create an account</string>
    <string name="login_forgot_password">Forgot Password</string>
    <string name="login_sharing_has_never_been_sweeter" translatable="false">Sharing has never been sweeter.</string>
    <string name="login_by_chocolit" translatable="false">by ChocolIT</string>
    <string name="login_back_to_login">Back to login</string>
    <string name="login_send_link">Send link</string>
    <string name="signup_already_have_an_account">Already have an account?</string>
    <string name="signup_confirm_password">Confirm Password</string>
    <string name="signup_signup">Sign up</string>
    <string name="signup_full_name">Full Name</string>
    <string name="profile_profile_tab">Profile Tab</string>
    <string name="profile_reputation">Reputation:</string>
    <string name="profile_products">PRODUCTS</string>
    <string name="profile_reviews">REVIEWS</string>
    <string name="profile_orders">ORDERS</string>
    <string name="profile_favourites">FAVOURITES</string>
    <string name="splash_screen_name">Name</string>
    <string name="tab_profile">Profile</string>
    <string name="tab_explore">Explore</string>
    <string name="tab_new_product">New Product</string>
    <string name="add_photos">+ Add photos</string>
    <string name="add_product_name">Product Name*</string>
    <string name="add_category">Category*</string>
    <string name="add_description">Description*</string>
    <string name="add_price">Price*</string>
    <string name="add_contact_details">Contact Details*</string>
    <string name="add_city">City*</string>
    <string name="add_display_name">*Display Name*</string>
    <string name="add_email_adress">Email adress</string>
    <string name="add_email_adress1">*Email adress*</string>
    <string name="add_phone_number">Phone Number</string>
    <string name="add_optional">(optional)</string>
    <string name="add_publish">Publish</string>
    <string name="explore_tools">Tools</string>
    <string name="explore_sports">Sports</string>
    <string name="explore_gardening">Gardening</string>
    <string name="explore_photo">Photo</string>
    <string name="explore_entartainment">Entertainment</string>
    <string name="explore_clothing">Clothing</string>
    <string name="explore_electronics">Electronics</string>
    <string name="explore_books">Books</string>
    <string name="add_a_category_must_be_selected">A category must be selected</string>
    <string name="add_price_must_be_a_number">Price must be a number</string>
    <string name="add_this_field_cant_be_empty">This field can\'t be empty</string>
    <string name="add_invalid_input">Invalid input</string>
    <string name="title_activity_categories">Categories</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="textview" translatable="false">TextView</string>
    <string name="sweetshare_is_here">SweetShare is here</string>
  
    <string name="todo">TODO</string>
    <string name="title_activity_my_products">My Products</string>

    <string name="lorem_ipsum" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer egestas erat eget tortor interdum placerat. Nam tristique nisi vel augue feugiat, quis viverra dui tincidunt. Fusce vitae luctus lorem. Maecenas fermentum purus id suscipit congue. Vivamus in mi auctor, placerat erat sit amet, tempor urna. Sed bibendum arcu eu odio facilisis viverra. </string>
    <string name="review_show_more">Show more</string>
    <string name="reviews_title_text">Reviews</string>
  
    <string name="title_activity_favorites">Favorites</string>

    <string name="terms_agreement_rent_text">By clicking \'Rent Product\' you agree to our terms of service.</string>
    <string name="remember_preferences_text">Remember my data preferences for my future orders.</string>
    <string name="rent_it_text">Rent it!</string>
    <string name="dateIntervalWarning">The selected time interval contains unavailable days.</string>
    <string name="learn_about_data_processing">Learn about how we process your data.</string>
    <string name="phone_number_text">Phone Number*</string>
    <string name="address_text">Address*</string>
    <string name="start_date_text">Start</string>
    <string name="end_date_text">End</string>
    <string name="reservation_successful_text">Reservation successful</string>

    <string name="my_orders_text">My Orders</string>

    <string name="settings_text">Settings</string>
    <string name="about_us_text">About Us</string>
    <string name="faq_text">FAQ</string>
    <string name="facebook_text">Facebook</string>
    <string name="instagram_text">Instagram</string>
    <string name="logout_text">Log Out</string>
    <string name="about_us_description">Have you ever wanted to use an item for a short period of time and not have to buy it? We have come up with a solution for this problem by developing SweetShare, a sharing app which enables you to lend and borrow a great variety of products (cameras, bikes, tools and many more). We want all our customers to have a great and safe experience using our app, and that is why every rental is covered by an auto generated rental contract. We hope you are enjoying so far SweetShare and don’t forget to give us some feedback at contact.chocolit@gmail.com.</string>

</resources>